Changed variables to JsonObject from CamundaVariables in Engine Services.
